# mosura

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.rst  TODO.md  docker-update-readme.js  mix.exs  pyproject.toml
.circleci/: config.yml
.github/: settings.yml
.github/workflows/: dependencies.yaml
apps/mosura_server/: .gitignore  mix.exs
apps/mosura_server/lib/: mosura_server.ex
apps/mosura_server/lib/mosura_server/: application.ex  endpoint.ex  jira.ex  project.ex  supervisor.ex  template.ex  ticket.ex
apps/mosura_server/test/: mosura_server_test.exs
apps/mosura_server/test/mosura_server/: endpoint.exs  endpoint_test.exs  project_test.exs
cli/: Cargo.toml
cli/src/: main.rs  settings.rs
config/: config.exs  prod.exs  test.exs
lib/: mosura.ex
mosura/: api.py  app.py  config.py  crud.py  database.py  log.py  models.py  schemas.py  scripts.py  tasks.py  ui.py
mosura/schemas/: __init__.py  issue.py  task.py  timeline.py
static/: app.css  tablesort-0.0.11.js  tablesort-0.0.11.min.js
templates/: base.html  gannt.html  home.html  issues.list.html  issues.show.html  settings.html  timeline.html
test/: mosura_test.exs
tests/: api_test.py  app_test.py  config_test.py  conftest.py  models_test.py  schemas_issue_test.py  schemas_test.py  schemas_timeline_closed_issue_test.py  schemas_timeline_partition_test.py  schemas_timeline_regressions_test.py  schemas_timeline_root_caused_test.py  schemas_timeline_test.py  tasks_issue_graph_test.py  tasks_test.py  ui_timeline_enrich_test.py
