[project]
name = "mosura"
version = "0.1.0"
description = "task management system"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }

authors = [
    { name = "Kevin James", email = "mosura@thekev.in" },
]

dependencies = [
    "fastapi==0.115.13",
    "httptools==0.6.4",
    "jinja2==3.1.6",
    "jira==3.8.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "sqlalchemy[aiosqlite]==2.0.41",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
]

[project.urls]
repository = "https://github.com/TheKevJames/mosura"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
pytest = "8.4.1"
pytest-asyncio = "1.0.0"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = 'uvicorn.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-Werror"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
