[project]
name = "mosura"
version = "0.1.0"
description = "task management system"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }

authors = [
    { name = "Kevin James", email = "mosura@thekev.in" },
]

dependencies = [
    "fastapi==0.121.2",
    "httptools==0.7.1",
    "jinja2==3.1.6",
    "jira==3.10.5",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "sqlalchemy[aiosqlite]==2.0.44",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
]

[project.urls]
repository = "https://github.com/TheKevJames/mosura"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
pytest = "9.0.1"
pytest-asyncio = "1.3.0"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = 'uvicorn.*'
ignore_missing_imports = true

[tool.pytest]
addopts = ["-Werror"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
