[project]
name = "mosura"
version = "0.2.0"
description = "task management system"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }

authors = [
    { name = "Kevin James", email = "mosura@thekev.in" },
]

dependencies = [
    "fastapi==0.135.2",
    "httptools==0.7.1",
    "jinja2==3.1.6",
    "jira==3.10.5",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "sqlalchemy[aiosqlite]==2.0.49",
    # NOTE: On arm64, Poetry can omit transitive greenlet from
    # sqlalchemy[aiosqlite] due marker evaluation (arm64 vs aarch64).
    # TODO: Remove once greenlet is reliably installed transitively on arm64.
    "greenlet==3.3.2; platform_machine == 'arm64'",
    "uvicorn==0.43.0",
    "uvloop==0.22.1",
]

[project.urls]
repository = "https://github.com/TheKevJames/mosura"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
niquests = "3.18.4"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = 'uvicorn.*'
ignore_missing_imports = true

[tool.pytest]
addopts = ["-Werror"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
