[package]
name = "mosura"
version = "0.1.0"
authors = ["Kevin James <KevinJames@thekev.in>"]
edition = "2018"

description = "Mosura CLI, access to the Mosura service via the CLI"
readme = "../README.rst"
repository = "https://github.com/TheKevJames/mosura"
license = "MIT"
keywords = ["mosura", "jira", "tui"]

[badges]
circle-ci = { repository = "TheKevJames/mosura", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = "~2.27.0"
config = { version = "0.10", features = ["yaml"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "2.2"
